# EA_V-CORE

./: CMakeLists.txt  build.bat  build_mac.sh  distribution.xml  package_mac.sh  setup.iss
.github/workflows/: build-windows.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: Saturator.h  StereoWidener.h  VCoreEngine.h  W1Limiter.h
Source/UI/: CustomLookAndFeel.h
build_mac/: CMakeCache.txt  Makefile  cmake_install.cmake  juce_vst3_helper
build_mac/EA_V-CORE_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h
build_mac/EA_V-CORE_artefacts/JuceLibraryCode/EA_V-CORE_AU/: Info.plist
build_mac/EA_V-CORE_artefacts/JuceLibraryCode/EA_V-CORE_VST3/: Info.plist
build_mac/EA_V-CORE_artefacts/JuceLibraryCode/Release/: Defs.txt
build_mac/EA_V-CORE_artefacts/Release/AU/EA V-CORE.component/Contents/: Info.plist
build_mac/EA_V-CORE_artefacts/Release/VST3/EA V-CORE.vst3/Contents/: Info.plist
build_mac/EA_V-CORE_artefacts/Release/VST3/EA V-CORE.vst3/Contents/Resources/: moduleinfo.json
build_mac/EA_V-CORE_artefacts/Release/VST3/EA V-CORE.vst3/Contents/_CodeSignature/: CodeResources
build_mac/juce_binarydata_SharedAssets/JuceLibraryCode/: BinaryData.h  BinaryData1.cpp  BinaryData2.cpp  input_file_list
